--- a/week1/day1/index.html
+++ b/week1/day1/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
     <h1>Xeberler Sayti</h1>
     <ul>
         
@@ -51,9 +50,7 @@
     <li><a href="#">tehsil xeberlerine buradan baxa bilersiz</a></li>
     <li><a href="#">xarici xeberlerine buradan baxa bilersiz</a></li>
    </ul>
-=======
-
->>>>>>> 6308dcd87eb05e7e50a506b4eeeb14c4042964e9
+   <p> saxlanilan kitablar</p>
 </body>
 
 </html>
