--- a/week2/day1/bootstrap/index.html
+++ b/week2/day1/bootstrap/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -12,135 +13,258 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-
-    <nav class="navbar bg-body-tertiary ">
-
-        <div class="container-fluid d-flex container">
-            <a class="navbar-brand">STARTBOOTSTRAPT</a>
-            <ul class="list">
-                <li><a href="">PORTFOLIO</a></li>
-                <li><a href="">ABOUT</a></li>
-                <li><a href="">CONTACT</a></li>
-            </ul>
-        </div>
-    </nav>
-    <main>
-        <section class="bodyy">
-            <div class="container first">
-                <div class="texs">
-                    <img src="	https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg"
-                        alt="">
-                    <br>
-                    <h1>START BOOTSTRAP</h1>
-                    <i class="fa-solid fa-star"></i>
-                    <ul class="list2">
-                        <li>Graphic Artist </li>
-                        <li>- Web Designe</li>
-                        <li>- Illustrator</li>
+    <header>
+        <div class="container ">
+            <nav class="navbar bg-body-tertiary custom-nav">
+                <div class="container-fluid ">
+                    <a class="navbar-brand">START BOOTSTRAP</a>
+                    <div class="bar">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                    <ul class="list">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Services</a></li>
                     </ul>
                 </div>
-            </div>
-
-        </section>
-        <section class="portfolio">
-            <div class="container second">
-                <div class="portfolio-head">
-                    <h1>PORTFOLIO</h1>
-                    <i class="fa-solid fa-star"></i>
-                </div>
-                <div class="row">
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png"
-                                    alt="">
-                            </div>
-                            <div class="overlay"><i class="fa-solid fa-plus"></i></div>
-                        </div>
-
-                    </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="	https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png"
-                                    alt="">
-                            </div>
-                            <div class="overlay"><i class="fa-solid fa-plus"></i></div>
-                        </div>
-
-                    </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="	https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png"
-                                    alt="">
-                            </div>
-                            <div class="overlay"><i class="fa-solid fa-plus"></i></div>
-                        </div>
-
-
-                    </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="	https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png"
-                                    alt="">
-                            </div>
-                            <div class="overlay"><i class="fa-solid fa-plus"></i></div>
-                        </div>
-
-
-                    </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <img src="	https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png"
-                                    alt="">
-                            </div>
-                            <div class="overlay"><i class="fa-solid fa-plus"></i></div>
-                        </div>
-
-
-                    </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div></div>
-                            <div class="card-body">
-                                <img src="	https://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png"
-                                    alt="">
-                            </div>
-                            <div class="overlay"><i class="fa-solid fa-plus"></i></div>
-                        </div>
-
-
-                    </div>
-
-
-                </div>
-            </div>
-        </section>
-        <section class="about">
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="main">
             <div class="container">
-                <div class="Title">
-                    <h1>ABOUT</h1>
-                    <i class="fa-solid fa-star"></i>
+                <div class="row row1">
+                    <div class="col-6">
+                        <div class="business">
+                            <h1>Present your business in a whole new way</h1> <br>
+                            <p>Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s
+                                most
+                                popular front-end open source toolkit!</p>
+                            <div class="button">
+                                <button id="bir">Get Started</button>
+                                <button id="bir">Learn More</button>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="paragraf">
-                    <div class="parag1">Freelancer is a free bootstrap theme created by Start Bootstrap. The download
-                        includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS
-                        stylesheets for easy customization.</div>
-                    <div class="parag1">You can create your own custom avatar for the masthead, change the icon in the
-                        dividers, and add your email address to the contact form to make it fully functional!</div>
-                </div>
-                <div class="free"><button>FREE DOWNLOAND</button></div>
             </div>
         </section>
+        <section class="featured">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4  col-md-6 col-sm-12">
 
+                        <div class="card" style="width: 20rem;">
+                            <div class="card-body">
+                                <i class="fa-solid fa-layer-group"></i> <br>
+                                <h2 class="card-title">
+                                    Featured title</h2>
+                                <p class="card-text">Paragraph of text beneath the heading to explain the heading. We'll
+                                    add onto it with another sentence and probably just keep going until we run out of
+                                    words.</p>
+                                <a href="#" class="btn btn-primary">Call to action</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4  col-md-6 col-sm-12">
+                        <div class="card" style="width: 20rem;">
+                            <div class="card-body">
+                                <i class="fa-solid fa-city"></i> <br>
+                                <h2 class="card-title">
+                                    Featured title</h2>
+                                <p class="card-text">Paragraph of text beneath the heading to explain the heading. We'll
+                                    add onto it with another sentence and probably just keep going until we run out of
+                                    words.</p>
+                                <a href="#" class="btn btn-primary">Call to action</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4  col-md-6 col-sm-12">
+                        <div class="card" style="width: 20rem;">
+                            <div class="card-body">
+                                <i class="fa-solid fa-toggle-on"></i> <br>
+                                <h2 class="card-title">
+                                    Featured title</h2>
+                                <p class="card-text">Paragraph of text beneath the heading to explain the heading. We'll
+                                    add onto it with another sentence and probably just keep going until we run out of
+                                    words.</p>
+                                <a href="#" class="btn btn-primary">Call to action</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12">
+                        <h1>Pay as you grow</h1>
+                        <p>With our no hassle pricing plans</p>
+                    </div>
+                </div>
+                <div class="row row2">
+                    <div class="col-lg-4  col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+
+                                <p class="card-text">FREE</p>
+                                <h1 class="card-title">$0</h1>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fa-solid fa-check"></i> 1 user</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>5GB storage</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>Unlimited public projects
+                                </li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i> Community access</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>Unlimited private projects
+                                </li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i>Dedicated support</li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i> Free linked domain</li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i>Monthly status reports</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Choose plan</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4  col-md-6 col-sm-12">
+                        <div class="card" style="width: 18rem;">
+                            <div class="card-body">
+
+                                <p class="card-text">FREE</p>
+                                <h1 class="card-title">$0</h1>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fa-solid fa-check"></i> 1 user</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>5GB storage</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>Unlimited public projects
+                                </li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i> Community access</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>Unlimited private projects
+                                </li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i>Dedicated support</li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i> Free linked domain</li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i>Monthly status reports</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Choose plan</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3  col-md-6 col-sm-12">
+                        <div class="card" style="width: 20rem;">
+                            <div class="card-body">
+
+                                <p class="card-text">FREE</p>
+                                <h1 class="card-title">$0</h1>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fa-solid fa-check"></i> 1 user</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>5GB storage</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>Unlimited public projects
+                                </li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i> Community access</li>
+                                <li class="list-group-item"> <i class="fa-solid fa-check"></i>Unlimited private projects
+                                </li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i>Dedicated support</li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i> Free linked domain</li>
+                                <li class="list-group-item"><i class="fa-solid fa-xmark"></i>Monthly status reports</li>
+
+                            </ul>
+                            <div class="card-body">
+                                <a href="#" class="card-link">Choose plan</a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="customer">
+            <div class="container">
+                <div class="text-center">
+                    <h1>Customer testimonials</h1>
+                    <p>Our customers love working with us</p>
+                </div>
+                <div class="row row3 ">
+                    <div class="col-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <div><i class="fa-solid fa-quote-right"></i></div>
+                                <div>
+                                    Thank you for putting together such a great product. We loved working with you and
+                                    the whole team, and we will be recommending you to others!
+
+                                    <br> - Client Name, Location
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <div><i class="fa-solid fa-quote-right"></i></div>
+                                <div>
+                                    Thank you for putting together such a great product. We loved working with you and
+                                    the whole team, and we will be recommending you to others!
+
+                                    <br> - Client Name, Location
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+        </section>
+        <section class="form">
+            <div class="container">
+                <div class="touch">
+                    <i class="fa-solid fa-envelope"></i>
+                    <h1>Get in touch</h1>
+                    <p>We'd love to hear from you</p>
+                </div>
+                <div class="row row4">
+                    <div class="col-6">
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="exampleFormControlInput1"
+                                placeholder="Full name"> <br>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="Email address"> <br>
+                            <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Phone">
+                        </div>
+                        <div class="mb-3">
+
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"> message</textarea>
+                            <br>
+                            <button class="form-control" id="exampleFormControlInput1">SUBMIT</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
-
+    <footer>
+        <div class="container">
+            <p>Copyright © Your Website 2023</p>
+        </div>
+    </footer>
 </body>
 
 </html>
