event deyisikik var

--- a/week2/EVENT/index.html
+++ b/week2/EVENT/index.html
@@ -16,14 +16,14 @@
         <div class="row">
             <div class="col-12">
                 <form>
-                    <input type="text" placeholder="company name" class="company-name form-input"> <br>
+                    <input type="text" placeholder="company name" class="company-name form-input"> 
                     <span>bosdur</span> 
-                    <input type="text" placeholder="contact name" class="contact-name form-input"> <br>
+                    <input type="text" placeholder="contact name" class="contact-name form-input">
                     <span>bosdur</span> 
-                    <input type="text" placeholder="contact title" class="contact-title form-input"> <br>
+                    <input type="text" placeholder="contact title" class="contact-title form-input"> 
                     <span>bosdur</span> 
-                    <input type="number" placeholder="company id" class="company-id form-input"> <br>
-                     <span>bosdur</span> 
+                    <!-- <input type="number" placeholder="company id" class="company-id form-input"> 
+                     <span>bosdur</span>  -->
                     <button class="add">add</button>
                 </form>
             </div>
@@ -36,6 +36,7 @@
                     <th>COMPANY NAME</th>
                     <th>CONTACT NAME</th>
                     <th>CONTACT TITLE</th>
+                    <th>Delete</th>
                 </tr>
                 <tbody class="mytable">
                     <tr>
@@ -43,7 +44,10 @@
                         <td> </td>
                         <td> </td>
                         <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>   
+                    
                 </tbody>
             </table>
 
