--- a/movies-api-task/register.html
+++ b/movies-api-task/register.html
@@ -42,6 +42,8 @@
                         placeholder="enter user password">
                     <input id="user-confirm-password" name="userConfirmPass" class="form-control mt-3" type="password"
                         placeholder="confirm password">
+                        <input type="checkbox" class=" mb-2" id="chec-input">
+                        <span>Are you admin?</span>
                     <button class="btn btn-warning d-block mx-auto mt-3" type="submit">Sign Up</button>
                 </form>
             </section>
