--- a/movies-api-task/add.html
+++ b/movies-api-task/add.html
@@ -38,6 +38,28 @@
         </div>
     </header>
 
+   <div class="container">
+    <main class="mt-2">
+        <div class="row d-flex justify-content-center">
+            <div class="col-6">
+                <form id="add-form" class="mt-15">
+                    <input class="form-control mb-2" id="title" type="text" placeholder="add movie title">
+                    <input class="form-control mb-2" id="poster" type="text" placeholder="add movie poster">
+                    <input class="form-control mb-2" id="trailerURL" type="text" placeholder="add movie trailerURL">
+                    <input class="form-control mb-2" id="genre" type="text" placeholder="add movie genre">
+                    <input class="form-control mb-2" id="age" type="number" placeholder="add movie age">
+                    <input class="form-control mb-2" id="country" type="text" placeholder="add movie country">
+                    <input class="form-control mb-2" id="director" type="text" placeholder="add movie director">
+                    <input class="form-control mb-2" type="text" placeholder="add movie title">
+                    <textarea class="form-control" type="text" id="desc" cols="30" rows="3" placeholder="add movie describtion"></textarea>
+                    <button class="btn btn-primary"  type="submit" id="addMoviebtn">add </button>
+                    <button class="btn btn-primary"  type="button" id="backtohome">back to home</button>  
+                    </form>
+            </div>
+        </div> 
+    </main>
+   </div>
+
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
