--- a/movies-api-task/index.html
+++ b/movies-api-task/index.html
@@ -34,6 +34,7 @@
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="add.html">Add</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </div>
     </header>
