taski elave etdim

--- a/movies-api-task/add.html
+++ b/movies-api-task/add.html
@@ -44,7 +44,7 @@
             <div class="col-6">
                 <form id="add-form" class="mt-15">
                     <input class="form-control mb-2" id="title" type="text" placeholder="add movie title">
-                    <input class="form-control mb-2" id="poster" type="text" placeholder="add movie poster">
+                    <input class="form-control mb-2" id="poster" type="file" placeholder="add movie poster">
                     <input class="form-control mb-2" id="trailerURL" type="text" placeholder="add movie trailerURL">
                     <input class="form-control mb-2" id="genre" type="text" placeholder="add movie genre">
                     <input class="form-control mb-2" id="age" type="number" placeholder="add movie age">
@@ -52,6 +52,7 @@
                     <input class="form-control mb-2" id="director" type="text" placeholder="add movie director">
                     <input class="form-control mb-2" type="text" placeholder="add movie title">
                     <textarea class="form-control" type="text" id="desc" cols="30" rows="3" placeholder="add movie describtion"></textarea>
+                  
                     <button class="btn btn-primary"  type="submit" id="addMoviebtn">add </button>
                     <button class="btn btn-primary"  type="button" id="backtohome">back to home</button>  
                     </form>
